--- a/app/src/main/res/layout/fragment_central.xml
+++ b/app/src/main/res/layout/fragment_central.xml
@@ -130,6 +130,19 @@
          android:layout_marginTop="0dp"
          android:layout_marginBottom="8dp" />
 
+     <android.support.design.widget.FloatingActionButton
+         android:id="@+id/floatingActionButton_cf"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_marginBottom="64dp"
+         android:layout_marginEnd="32dp"
+         android:clickable="true"
+         app:elevation="12dp"
+         app:layout_constraintBottom_toBottomOf="parent"
+         app:layout_constraintEnd_toEndOf="parent"
+         app:rippleColor="@color/colorPrimaryDark"
+         app:srcCompat="@drawable/plus" />
 
-</android.support.constraint.ConstraintLayout>
+
+ </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
