--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -74,6 +74,7 @@
         android:text="@string/tapanyplace"
         android:textColor="@color/colorAccent"
         android:textSize="@dimen/text_size_big"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
